# J2_temp

./: AGENTS.md  LICENSE  README.md  combined_code.txt  mypy.ini  park_forest.kml  pyproject.toml  ruff.toml
docs/: MODEL_ASSUMPTIONS.md  architecture.md  inputs.md  methodology.md  public-data-feeds.md  roadmap.md  third-party.md
docs/reference/: IL Park Forest 26 Mar 03 0547 UTC 06.xlsx  drag_paper.txt  park_forest_paper.txt  testfile.json
docs/schemas/: atmos_profile.schema.json  event.schema.json  fragment.schema.json  radar_metadata.schema.json  vertical_grid.schema.json
docs/templates/: atmos_profile.json  event.json  fragments.json  radar_metadata.json  vertical_grid.json
scripts/: run_parity.ps1  run_parity.sh  run_park_forest.py
src/meteor_darkflight/: __init__.py
temp_park_forest/: doc.kml
temp_park_forest/files/: KGRR_20030327_055042_REF_0150-55030.png.dae  KILX_20030327_054455_REF_0339-33468.png.dae  KIND_20030327_054431_REF_0248-87607.png.dae  KIWX_20030327_054857_REF_0238-26026.png.dae  KIWX_20030327_054857_REF_0339-3060.png.dae  KIWX_20030327_055446_REF_0238-41067.png.dae  KLOT_20030327_054711_REF_0991-83302.png.dae  KLOT_20030327_054711_REF_1462-274.png.dae
tests/: parity_utils.py  test_cli_validate.py  test_ensemble_driver.py  test_formula_graph_extractor.py  test_parity_end_to_end.py  test_parity_ensemble_summary.py  test_parity_landing_offsets.py  test_parity_lateral_displacement.py  test_physics_drag.py  test_sim_kernel.py  test_smoke.py  test_trajectory_integrator.py
tests/fixtures/: README.md  formula_coverage_snapshot.json
(+58 files in other folders)
