[project]
name = "meteor_darkflight"
version = "0.0.0"
description = "Darkflight simulation and strewn-field pipeline (scaffold)"
dependencies = [
    "pydantic>=1.10",
    "typer>=0.9",
    "numpy>=1.25",
    "shapely>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E203", "E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["meteor_darkflight"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
